@@ -3,8 +3,10 @@ package uk.gov.companieshouse.api.testdata.service.impl;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.never;
@@ -13,8 +15,10 @@ import static org.mockito.Mockito.when;
 
 import java.time.Instant;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
+
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -30,28 +34,38 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import uk.gov.companieshouse.api.testdata.exception.BarcodeServiceException;
 import uk.gov.companieshouse.api.testdata.exception.DataException;
+
 import uk.gov.companieshouse.api.testdata.model.entity.AssociatedFiling;
 import uk.gov.companieshouse.api.testdata.model.entity.Capital;
 import uk.gov.companieshouse.api.testdata.model.entity.DescriptionValues;
 import uk.gov.companieshouse.api.testdata.model.entity.FilingHistory;
+import uk.gov.companieshouse.api.testdata.model.entity.Links;
 import uk.gov.companieshouse.api.testdata.model.entity.Resolutions;
+
 import uk.gov.companieshouse.api.testdata.model.rest.CapitalSpec;
+import uk.gov.companieshouse.api.testdata.model.rest.CategoryType;
 import uk.gov.companieshouse.api.testdata.model.rest.CompanySpec;
 import uk.gov.companieshouse.api.testdata.model.rest.DescriptionValuesSpec;
+import uk.gov.companieshouse.api.testdata.model.rest.FilingHistoryDescriptionType;
 import uk.gov.companieshouse.api.testdata.model.rest.FilingHistorySpec;
+import uk.gov.companieshouse.api.testdata.model.rest.ResolutionDescriptionType;
+import uk.gov.companieshouse.api.testdata.model.rest.ResolutionType;
 import uk.gov.companieshouse.api.testdata.model.rest.ResolutionsSpec;
+import uk.gov.companieshouse.api.testdata.model.rest.SubcategoryType;
+
 import uk.gov.companieshouse.api.testdata.repository.FilingHistoryRepository;
 import uk.gov.companieshouse.api.testdata.service.BarcodeService;
 import uk.gov.companieshouse.api.testdata.service.RandomService;
 
 @ExtendWith(MockitoExtension.class)
 class FilingHistoryServiceImplTest {
-    private static final Long UNENCODED_ID = 2345678L;
+    private static final Long UN_ENCODED_ID = 2345678L;
     private static final String TEST_ID = "test_id";
     private static final String COMPANY_NUMBER = "12345678";
     private static final String BARCODE = "BARCODE";
     private static final int ENTITY_ID_LENGTH = 9;
     private static final String ENTITY_ID_PREFIX = "8";
+    private static final String NEW_INC = "NEWINC";
 
     @Mock
     private FilingHistoryRepository filingHistoryRepository;
@@ -69,9 +83,9 @@ class FilingHistoryServiceImplTest {
             = "Certificate of incorporation general company details & statements of; "
             + "officers, capital & shareholdings, guarantee, compliance memorandum of association";
 
-    private ResolutionsSpec buildResolution(String barcode, String category, String description, String subCategory, String type) {
-        ResolutionsSpec res = new ResolutionsSpec();
-        res.setBarcode(barcode);
+    private ResolutionsSpec buildResolution(String category, ResolutionDescriptionType description, String subCategory, ResolutionType type)
+    {
+        var res = new ResolutionsSpec();
         res.setCategory(category);
         res.setDescription(description);
         res.setSubCategory(subCategory);
@@ -87,8 +101,8 @@ class FilingHistoryServiceImplTest {
         FilingHistorySpec filingHistorySpec = new FilingHistorySpec();
         spec.setFilingHistoryList(List.of(filingHistorySpec));
 
-        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UNENCODED_ID);
-        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UNENCODED_ID, 8))
+        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UN_ENCODED_ID);
+        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UN_ENCODED_ID, 8))
                 .thenReturn(TEST_ID);
         when(barcodeService.getBarcode()).thenReturn(BARCODE);
 
@@ -110,9 +124,9 @@ class FilingHistoryServiceImplTest {
         assertEquals("incorporation", filingHistory.getCategory());
         assertEquals("incorporation-company", filingHistory.getDescription());
         assertNotNull(filingHistory.getDate());
-        assertEquals("NEWINC", filingHistory.getType());
+        assertEquals(NEW_INC, filingHistory.getType());
         assertEquals(Integer.valueOf(10), filingHistory.getPages());
-        assertEquals(ENTITY_ID_PREFIX + UNENCODED_ID, filingHistory.getEntityId());
+        assertEquals(ENTITY_ID_PREFIX + UN_ENCODED_ID, filingHistory.getEntityId());
         assertEquals(CERTIFICATE_DESCRIPTION, filingHistory.getOriginalDescription());
         assertEquals(BARCODE, filingHistory.getBarcode());
 
@@ -176,14 +190,12 @@ class FilingHistoryServiceImplTest {
         CompanySpec spec = new CompanySpec();
         spec.setCompanyNumber(COMPANY_NUMBER);
         FilingHistorySpec filingHistorySpec = new FilingHistorySpec();
-        filingHistorySpec.setCategory("test-category");
-        filingHistorySpec.setDescription("test-description");
-        filingHistorySpec.setType("test-type");
-        filingHistorySpec.setOriginalDescription("test-original-description");
+        filingHistorySpec.setCategory(CategoryType.INCORPORATION);
+        filingHistorySpec.setType("REC1");
         spec.setFilingHistoryList(List.of(filingHistorySpec));
 
-        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UNENCODED_ID);
-        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UNENCODED_ID, 8)).thenReturn(TEST_ID);
+        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UN_ENCODED_ID);
+        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UN_ENCODED_ID, 8)).thenReturn(TEST_ID);
         when(barcodeService.getBarcode()).thenReturn(BARCODE);
 
         FilingHistory savedHistory = new FilingHistory();
@@ -199,18 +211,17 @@ class FilingHistoryServiceImplTest {
         assertEquals(TEST_ID, filingHistory.getId());
         assertEquals(COMPANY_NUMBER, filingHistory.getCompanyNumber());
         assertNotNull(filingHistory.getLinks());
-        assertEquals("test-category", filingHistory.getCategory());
-        assertEquals("test-description", filingHistory.getDescription());
+        assertEquals(CategoryType.INCORPORATION.getValue(), filingHistory.getCategory());
+        assertEquals("incorporation-company", filingHistory.getDescription());
         assertNotNull(filingHistory.getDate());
-        assertEquals("test-type", filingHistory.getType());
+        assertEquals("REC1", filingHistory.getType());
         assertEquals(Integer.valueOf(10), filingHistory.getPages());
-        assertEquals(ENTITY_ID_PREFIX + UNENCODED_ID, filingHistory.getEntityId());
-        assertEquals("test-original-description", filingHistory.getOriginalDescription());
+        assertEquals(ENTITY_ID_PREFIX + UN_ENCODED_ID, filingHistory.getEntityId());
         assertEquals(BARCODE, filingHistory.getBarcode());
 
         List<AssociatedFiling> associatedFilings = filingHistory.getAssociatedFilings();
         assertEquals(2, associatedFilings.size());
-        AssociatedFiling incorporation = associatedFilings.get(0);
+        AssociatedFiling incorporation = associatedFilings.getFirst();
         assertEquals("incorporation", incorporation.getCategory());
         assertNotNull(incorporation.getDate());
         assertEquals("model-articles-adopted", incorporation.getDescription());
@@ -232,22 +243,18 @@ class FilingHistoryServiceImplTest {
         spec.setCompanyNumber(COMPANY_NUMBER);
 
         FilingHistorySpec filingHistorySpec1 = new FilingHistorySpec();
-        filingHistorySpec1.setCategory("test-category-1");
-        filingHistorySpec1.setDescription("test-description-1");
-        filingHistorySpec1.setType("test-type-1");
-        filingHistorySpec1.setOriginalDescription("test-original-description-1");
+        filingHistorySpec1.setCategory(CategoryType.ACCOUNTS);
+        filingHistorySpec1.setType("PSC01");
 
         FilingHistorySpec filingHistorySpec2 = new FilingHistorySpec();
-        filingHistorySpec2.setCategory("test-category-2");
-        filingHistorySpec2.setDescription("test-description-2");
-        filingHistorySpec2.setType("test-type-2");
-        filingHistorySpec2.setOriginalDescription("test-original-description-2");
+        filingHistorySpec2.setCategory(CategoryType.ADDRESS);
+        filingHistorySpec2.setType("PSC02");
 
         spec.setFilingHistoryList(List.of(filingHistorySpec1, filingHistorySpec2));
 
-        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UNENCODED_ID, UNENCODED_ID + 1);
-        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UNENCODED_ID, 8)).thenReturn(TEST_ID + "_1");
-        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + (UNENCODED_ID + 1), 8)).thenReturn(TEST_ID + "_2");
+        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UN_ENCODED_ID, UN_ENCODED_ID + 1);
+        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UN_ENCODED_ID, 8)).thenReturn(TEST_ID + "_1");
+        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + (UN_ENCODED_ID + 1), 8)).thenReturn(TEST_ID + "_2");
         when(barcodeService.getBarcode()).thenReturn(BARCODE);
 
         FilingHistory savedHistory = new FilingHistory();
@@ -263,21 +270,22 @@ class FilingHistoryServiceImplTest {
         List<FilingHistory> capturedHistories = filingHistoryCaptor.getAllValues();
         assertEquals(2, capturedHistories.size());
 
-        FilingHistory first = capturedHistories.get(0);
+        FilingHistory first = capturedHistories.getFirst();
         assertEquals(TEST_ID + "_1", first.getId());
-        assertEquals("test-category-1", first.getCategory());
-        assertEquals("test-description-1", first.getDescription());
-        assertEquals("test-type-1", first.getType());
-        assertEquals("test-original-description-1", first.getOriginalDescription());
+        assertEquals(CategoryType.ACCOUNTS.getValue(), first.getCategory());
+        assertEquals("incorporation-company", first.getDescription());
+        assertEquals("PSC01", first.getType());
         assertEquals(COMPANY_NUMBER, first.getCompanyNumber());
         assertEquals(BARCODE, first.getBarcode());
 
         FilingHistory second = capturedHistories.get(1);
         assertEquals(TEST_ID + "_2", second.getId());
-        assertEquals("test-category-2", second.getCategory());
-        assertEquals("test-description-2", second.getDescription());
-        assertEquals("test-type-2", second.getType());
-        assertEquals("test-original-description-2", second.getOriginalDescription());
+        assertEquals(CategoryType.ADDRESS.getValue(), second.getCategory());
+        assertEquals("incorporation-company", second.getDescription());
+        assertEquals("PSC02", second.getType());
+        assertEquals("Certificate of incorporation general company details & statements of; "
+                + "officers, capital & shareholdings, guarantee, "
+                + "compliance memorandum of association", second.getOriginalDescription());
         assertEquals(COMPANY_NUMBER, second.getCompanyNumber());
         assertEquals(BARCODE, second.getBarcode());
     }
@@ -289,8 +297,8 @@ class FilingHistoryServiceImplTest {
 
         spec.setFilingHistoryList(Collections.emptyList());
 
-        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UNENCODED_ID);
-        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UNENCODED_ID, 8)).thenReturn(TEST_ID);
+        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UN_ENCODED_ID);
+        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UN_ENCODED_ID, 8)).thenReturn(TEST_ID);
         when(barcodeService.getBarcode()).thenReturn(BARCODE);
 
         FilingHistory savedHistory = new FilingHistory();
@@ -310,16 +318,16 @@ class FilingHistoryServiceImplTest {
         assertEquals("incorporation", filingHistory.getCategory());
         assertEquals("incorporation-company", filingHistory.getDescription());
         assertNotNull(filingHistory.getDate());
-        assertEquals("NEWINC", filingHistory.getType());
+        assertEquals(NEW_INC, filingHistory.getType());
         assertEquals(Integer.valueOf(10), filingHistory.getPages());
-        assertEquals(ENTITY_ID_PREFIX + UNENCODED_ID, filingHistory.getEntityId());
+        assertEquals(ENTITY_ID_PREFIX + UN_ENCODED_ID, filingHistory.getEntityId());
         assertEquals(CERTIFICATE_DESCRIPTION, filingHistory.getOriginalDescription());
         assertEquals(BARCODE, filingHistory.getBarcode());
 
         List<AssociatedFiling> associatedFilings = filingHistory.getAssociatedFilings();
         assertEquals(2, associatedFilings.size());
 
-        AssociatedFiling incorporation = associatedFilings.get(0);
+        AssociatedFiling incorporation = associatedFilings.getFirst();
         assertEquals("incorporation", incorporation.getCategory());
         assertNotNull(incorporation.getDate());
         assertEquals("model-articles-adopted", incorporation.getDescription());
@@ -349,12 +357,9 @@ class FilingHistoryServiceImplTest {
     void getBarcodeThrowsDataExceptionWhenBarcodeServiceFails() throws BarcodeServiceException {
         when(barcodeService.getBarcode()).thenThrow(new BarcodeServiceException("Barcode error"));
 
-        DataException thrown = assertThrows(DataException.class, () -> {
-            filingHistoryService.getBarcode();
-        });
+        DataException thrown = assertThrows(DataException.class, () -> filingHistoryService.getBarcode());
 
         assertEquals("Barcode error", thrown.getMessage());
-        assertTrue(thrown.getCause() instanceof BarcodeServiceException);
     }
 
     @Test
@@ -363,8 +368,8 @@ class FilingHistoryServiceImplTest {
         spec.setCompanyNumber(COMPANY_NUMBER);
         spec.setAccountsDueStatus(null);
 
-        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UNENCODED_ID);
-        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UNENCODED_ID, 8))
+        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UN_ENCODED_ID);
+        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UN_ENCODED_ID, 8))
                 .thenReturn(TEST_ID);
         when(barcodeService.getBarcode()).thenReturn(BARCODE);
 
@@ -385,9 +390,9 @@ class FilingHistoryServiceImplTest {
         assertEquals("incorporation", filingHistory.getCategory());
         assertEquals("incorporation-company", filingHistory.getDescription());
         assertNotNull(filingHistory.getDate());
-        assertEquals("NEWINC", filingHistory.getType());
+        assertEquals(NEW_INC, filingHistory.getType());
         assertEquals(Integer.valueOf(10), filingHistory.getPages());
-        assertEquals(ENTITY_ID_PREFIX + UNENCODED_ID, filingHistory.getEntityId());
+        assertEquals(ENTITY_ID_PREFIX + UN_ENCODED_ID, filingHistory.getEntityId());
         assertEquals(CERTIFICATE_DESCRIPTION ,filingHistory.getOriginalDescription());
         assertEquals(BARCODE, filingHistory.getBarcode());
     }
@@ -401,8 +406,8 @@ class FilingHistoryServiceImplTest {
         FilingHistorySpec filingHistorySpec = new FilingHistorySpec();
         spec.setFilingHistoryList(List.of(filingHistorySpec));
 
-        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UNENCODED_ID);
-        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UNENCODED_ID, 8))
+        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UN_ENCODED_ID);
+        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UN_ENCODED_ID, 8))
                 .thenReturn(TEST_ID);
         when(barcodeService.getBarcode()).thenReturn(BARCODE);
         when(randomService.generateAccountsDueDateByStatus("due-soon")).thenReturn(LocalDate.now());
@@ -424,9 +429,9 @@ class FilingHistoryServiceImplTest {
         assertEquals("incorporation", filingHistory.getCategory());
         assertEquals("incorporation-company", filingHistory.getDescription());
         assertNotNull(filingHistory.getDate());
-        assertEquals("NEWINC", filingHistory.getType());
+        assertEquals(NEW_INC, filingHistory.getType());
         assertEquals(Integer.valueOf(10), filingHistory.getPages());
-        assertEquals(ENTITY_ID_PREFIX + UNENCODED_ID, filingHistory.getEntityId());
+        assertEquals(ENTITY_ID_PREFIX + UN_ENCODED_ID, filingHistory.getEntityId());
         assertEquals(CERTIFICATE_DESCRIPTION, filingHistory.getOriginalDescription());
         assertEquals(BARCODE, filingHistory.getBarcode());
     }
@@ -440,8 +445,8 @@ class FilingHistoryServiceImplTest {
         FilingHistorySpec filingHistorySpec = new FilingHistorySpec();
         spec.setFilingHistoryList(List.of(filingHistorySpec));
 
-        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UNENCODED_ID);
-        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UNENCODED_ID, 8))
+        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UN_ENCODED_ID);
+        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UN_ENCODED_ID, 8))
                 .thenReturn(TEST_ID);
         when(barcodeService.getBarcode()).thenReturn(BARCODE);
         when(randomService.generateAccountsDueDateByStatus("overdue")).thenReturn(LocalDate.now());
@@ -463,9 +468,9 @@ class FilingHistoryServiceImplTest {
         assertEquals("incorporation", filingHistory.getCategory());
         assertEquals("incorporation-company", filingHistory.getDescription());
         assertNotNull(filingHistory.getDate());
-        assertEquals("NEWINC", filingHistory.getType());
+        assertEquals(NEW_INC, filingHistory.getType());
         assertEquals(Integer.valueOf(10), filingHistory.getPages());
-        assertEquals(ENTITY_ID_PREFIX + UNENCODED_ID, filingHistory.getEntityId());
+        assertEquals(ENTITY_ID_PREFIX + UN_ENCODED_ID, filingHistory.getEntityId());
         assertEquals(CERTIFICATE_DESCRIPTION, filingHistory.getOriginalDescription());
         assertEquals(BARCODE, filingHistory.getBarcode());
     }
@@ -477,36 +482,32 @@ class FilingHistoryServiceImplTest {
 
         FilingHistorySpec ap01Spec = new FilingHistorySpec();
         ap01Spec.setType("AP01");
-        ap01Spec.setCategory("appointment");
-        ap01Spec.setDescription("appointment-description");
+        ap01Spec.setCategory(CategoryType.CAPITAL);
         ap01Spec.setDocumentMetadata(true);
 
         FilingHistorySpec mr01Spec = new FilingHistorySpec();
         mr01Spec.setType("MR01");
-        mr01Spec.setCategory("mortgage");
-        mr01Spec.setDescription("mortgage-description");
+        mr01Spec.setCategory(CategoryType.MORTGAGE);
 
         FilingHistorySpec resolutionsSpec = new FilingHistorySpec();
         resolutionsSpec.setType("RESOLUTIONS");
-        resolutionsSpec.setCategory("resolution-category");
+        resolutionsSpec.setCategory(CategoryType.RESOLUTION);
         resolutionsSpec.setResolutions(List.of(
-                buildResolution("res-barcode-1", "resolution-cat-1", "resolution-desc-1", "sub-cat-1", "RES1"),
-                buildResolution("res-barcode-2", "resolution-cat-2", "resolution-desc-2", "sub-cat-2", "RES2")
+                buildResolution("resolution-cat-1", ResolutionDescriptionType.ELECTIVE_RESOLUTION, "sub-cat-1", ResolutionType.ELRES),
+                buildResolution("resolution-cat-2", ResolutionDescriptionType.LIQUIDATION_SPECIAL_RESOLUTION_TO_WIND_UP_NORTHERN_IRELAND,  "sub-cat-2", ResolutionType.RES01)
         ));
 
         FilingHistorySpec aaSpec = new FilingHistorySpec();
         aaSpec.setType("AA");
-        aaSpec.setCategory("accounts");
-        aaSpec.setDescription("annual-accounts-description");
+        aaSpec.setCategory(CategoryType.ACCOUNTS);
 
         FilingHistorySpec cs01Spec = new FilingHistorySpec();
         cs01Spec.setType("CS01");
-        cs01Spec.setCategory("confirmation-statement");
-        cs01Spec.setDescription("confirmation-description");
+        cs01Spec.setCategory(CategoryType.CONFIRMATION_STATEMENT);
 
         spec.setFilingHistoryList(List.of(ap01Spec, mr01Spec, resolutionsSpec, aaSpec, cs01Spec));
 
-        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UNENCODED_ID);
+        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UN_ENCODED_ID);
         when(randomService.addSaltAndEncode(Mockito.anyString(), eq(8))).thenReturn(TEST_ID);
         when(barcodeService.getBarcode()).thenReturn(BARCODE);
         when(filingHistoryRepository.save(Mockito.any())).thenAnswer(invocation -> invocation.getArgument(0));
@@ -532,8 +533,8 @@ class FilingHistoryServiceImplTest {
 
     private void validateAp01Filing(FilingHistory ap01) {
         assertEquals("AP01", ap01.getType());
-        assertEquals("appointment-description", ap01.getDescription());
-        assertEquals("appointment", ap01.getCategory());
+        assertEquals("incorporation-company", ap01.getDescription());
+        assertEquals(CategoryType.CAPITAL.getValue(), ap01.getCategory());
         assertNotNull(ap01.getDescriptionValues());
         assertNotNull(ap01.getOriginalValues());
         assertNotNull(ap01.getLinks().getDocumentMetadata());
@@ -541,8 +542,8 @@ class FilingHistoryServiceImplTest {
 
     private void validateMr01Filing(FilingHistory mr01) {
         assertEquals("MR01", mr01.getType());
-        assertEquals("mortgage-description", mr01.getDescription());
-        assertEquals("mortgage", mr01.getCategory());
+        assertEquals("incorporation-company", mr01.getDescription());
+        assertEquals(CategoryType.MORTGAGE.getValue(), mr01.getCategory());
         assertTrue(mr01.isPaperFiled());
         assertEquals(LocalDate.of(2003, 2, 28).atStartOfDay(ZoneOffset.UTC).toInstant(), mr01.getDate());
         assertNotNull(mr01.getDescriptionValues());
@@ -550,35 +551,34 @@ class FilingHistoryServiceImplTest {
 
     private void validateResolutionsFiling(FilingHistory res) {
         assertEquals("RESOLUTIONS", res.getType());
-        assertEquals("resolution-category", res.getCategory());
+        assertEquals(CategoryType.RESOLUTION.getValue(), res.getCategory());
         assertNotNull(res.getResolutions());
         assertEquals(2, res.getResolutions().size());
 
-        validateResolution(res.getResolutions().get(0), "res-barcode-1", "resolution-cat-1", "resolution-desc-1", "sub-cat-1", "RES1");
-        validateResolution(res.getResolutions().get(1), "res-barcode-2", "resolution-cat-2", "resolution-desc-2", "sub-cat-2", "RES2");
+        validateResolution(res.getResolutions().get(0),  "resolution-cat-1", ResolutionDescriptionType.ELECTIVE_RESOLUTION, "sub-cat-1", ResolutionType.ELRES);
+        validateResolution(res.getResolutions().get(1),  "resolution-cat-2", ResolutionDescriptionType.LIQUIDATION_SPECIAL_RESOLUTION_TO_WIND_UP_NORTHERN_IRELAND, "sub-cat-2", ResolutionType.RES01);
     }
 
-    private void validateResolution(Resolutions r, String barcode, String cat, String desc, String subCat, String type) {
-        assertEquals(barcode, r.getBarcode());
+    private void validateResolution(Resolutions r, String cat, ResolutionDescriptionType desc, String subCat, ResolutionType type) {
         assertEquals(cat, r.getCategory());
-        assertEquals(desc, r.getDescription());
+        assertEquals(desc.getValue(), r.getDescription());
         assertEquals(subCat, r.getSubCategory());
-        assertEquals(type, r.getType());
+        assertEquals(type.getValue(), r.getType());
         assertNotNull(r.getDeltaAt());
     }
 
     private void validateAaFiling(FilingHistory aa) {
         assertEquals("AA", aa.getType());
-        assertEquals("annual-accounts-description", aa.getDescription());
-        assertEquals("accounts", aa.getCategory());
+        assertEquals("incorporation-company", aa.getDescription());
+        assertEquals(CategoryType.ACCOUNTS.getValue(), aa.getCategory());
         assertNotNull(aa.getDescriptionValues());
         assertNotNull(aa.getDescriptionValues().getMadeUpDate());
     }
 
     private void validateCs01Filing(FilingHistory cs01) {
         assertEquals("CS01", cs01.getType());
-        assertEquals("confirmation-description", cs01.getDescription());
-        assertEquals("confirmation-statement", cs01.getCategory());
+        assertEquals("incorporation-company", cs01.getDescription());
+        assertEquals(CategoryType.CONFIRMATION_STATEMENT.getValue(), cs01.getCategory());
         assertNotNull(cs01.getDescriptionValues());
         assertNotNull(cs01.getDescriptionValues().getMadeUpDate());
     }
@@ -639,8 +639,170 @@ class FilingHistoryServiceImplTest {
         assertNotNull(capitalList);
         assertEquals(1, capitalList.size());
 
-        Capital capital = capitalList.get(0);
+        Capital capital = capitalList.getFirst();
         assertEquals("GBP", capital.getCurrency());
         assertEquals("100", capital.getFigure());
     }
+
+    // 1. SubCategory logic
+    @Test
+    void createWithSubCategory_setsSubCategory() throws DataException, BarcodeServiceException {
+        CompanySpec spec = new CompanySpec();
+        spec.setCompanyNumber(COMPANY_NUMBER);
+        FilingHistorySpec fhSpec = new FilingHistorySpec();
+        fhSpec.setType("REC1");
+        fhSpec.setSubCategory(SubcategoryType.OTHER);
+        spec.setFilingHistoryList(List.of(fhSpec));
+
+        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UN_ENCODED_ID);
+        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UN_ENCODED_ID, 8)).thenReturn(TEST_ID);
+        when(barcodeService.getBarcode()).thenReturn(BARCODE);
+
+        FilingHistory savedHistory = new FilingHistory();
+        when(filingHistoryRepository.save(Mockito.any())).thenReturn(savedHistory);
+
+        filingHistoryService.create(spec);
+
+        ArgumentCaptor<FilingHistory> captor = ArgumentCaptor.forClass(FilingHistory.class);
+        verify(filingHistoryRepository).save(captor.capture());
+        assertEquals(SubcategoryType.OTHER.getValue(), captor.getValue().getSubCategory());
+    }
+
+    // 2. Document metadata in Links
+    @Test
+    void createLinks_setsDocumentMetadata_whenTrue() {
+        Links links = filingHistoryService.createLinks(COMPANY_NUMBER, TEST_ID, true);
+        assertEquals("document/" + TEST_ID, links.getDocumentMetadata());
+    }
+
+    @Test
+    void createLinks_doesNotSetDocumentMetadata_whenFalse() {
+        Links links = filingHistoryService.createLinks(COMPANY_NUMBER, TEST_ID, false);
+        assertNull(links.getDocumentMetadata());
+    }
+
+    // 3. Unknown type handling (default branch)
+    @Test
+    void createWithUnknownType_setsAssociatedFilings() throws DataException, BarcodeServiceException {
+        CompanySpec spec = new CompanySpec();
+        spec.setCompanyNumber(COMPANY_NUMBER);
+        FilingHistorySpec fhSpec = new FilingHistorySpec();
+        fhSpec.setType("REC1");
+        spec.setFilingHistoryList(List.of(fhSpec));
+
+        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UN_ENCODED_ID);
+        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UN_ENCODED_ID, 8)).thenReturn(TEST_ID);
+        when(barcodeService.getBarcode()).thenReturn(BARCODE);
+
+        FilingHistory savedHistory = new FilingHistory();
+        when(filingHistoryRepository.save(Mockito.any())).thenReturn(savedHistory);
+
+        filingHistoryService.create(spec);
+
+        ArgumentCaptor<FilingHistory> captor = ArgumentCaptor.forClass(FilingHistory.class);
+        verify(filingHistoryRepository).save(captor.capture());
+        assertNotNull(captor.getValue().getAssociatedFilings());
+        assertEquals(2, captor.getValue().getAssociatedFilings().size());
+    }
+
+    // 4. AP01 original values
+    @Test
+    void createWithAP01_setsOriginalValues() throws DataException, BarcodeServiceException {
+        CompanySpec spec = new CompanySpec();
+        spec.setCompanyNumber(COMPANY_NUMBER);
+        FilingHistorySpec fhSpec = new FilingHistorySpec();
+        fhSpec.setType("AP01");
+        spec.setFilingHistoryList(List.of(fhSpec));
+
+        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UN_ENCODED_ID);
+        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UN_ENCODED_ID, 8)).thenReturn(TEST_ID);
+        when(barcodeService.getBarcode()).thenReturn(BARCODE);
+
+        FilingHistory savedHistory = new FilingHistory();
+        when(filingHistoryRepository.save(Mockito.any())).thenReturn(savedHistory);
+
+        filingHistoryService.create(spec);
+
+        ArgumentCaptor<FilingHistory> captor = ArgumentCaptor.forClass(FilingHistory.class);
+        verify(filingHistoryRepository).save(captor.capture());
+        assertNotNull(captor.getValue().getOriginalValues());
+        assertEquals("John Test", captor.getValue().getOriginalValues().getOfficerName());
+    }
+
+    // 5. convertInstantToDeltaAt static method
+    @Test
+    void convertInstantToDeltaAt_formatsCorrectly() {
+        Instant instant = LocalDateTime.of(2024, 6, 1, 12, 34, 56, 123456000)
+                .toInstant(ZoneOffset.UTC);
+        String result = FilingHistoryServiceImpl.convertInstantToDeltaAt(instant);
+        assertTrue(result.startsWith("20240601123456"));
+        assertEquals(20, result.length());
+    }
+
+    // 6. AssociatedFilings content
+    @Test
+    void createAssociatedFilings_setsDescriptionValuesMap() {
+        Instant now = Instant.now();
+        List<AssociatedFiling> filings = filingHistoryService.createAssociatedFilings(now, now);
+        AssociatedFiling capital = filings.stream()
+                .filter(f -> "capital".equals(f.getCategory()))
+                .findFirst().orElseThrow();
+        assertNotNull(capital.getDescriptionValues());
+        assertTrue(capital.getDescriptionValues().containsKey("capital"));
+        assertTrue(capital.getDescriptionValues().containsKey("date"));
+    }
+
+    // 7. Description is set from FilingHistorySpec if present
+    @Test
+    void createWithDescription_setsCustomDescription() throws DataException, BarcodeServiceException {
+        CompanySpec spec = new CompanySpec();
+        spec.setCompanyNumber(COMPANY_NUMBER);
+        FilingHistorySpec fhSpec = new FilingHistorySpec();
+        fhSpec.setType("REC1");
+
+        // Mock a description type
+        var customDescription = FilingHistoryDescriptionType.APPOINT_PERSON_DIRECTOR_COMPANY_WITH_NAME;
+        fhSpec.setDescription(customDescription);
+
+        spec.setFilingHistoryList(List.of(fhSpec));
+
+        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UN_ENCODED_ID);
+        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UN_ENCODED_ID, 8)).thenReturn(TEST_ID);
+        when(barcodeService.getBarcode()).thenReturn(BARCODE);
+
+        FilingHistory savedHistory = new FilingHistory();
+        when(filingHistoryRepository.save(Mockito.any())).thenReturn(savedHistory);
+
+        filingHistoryService.create(spec);
+
+        ArgumentCaptor<FilingHistory> captor = ArgumentCaptor.forClass(FilingHistory.class);
+        verify(filingHistoryRepository).save(captor.capture());
+        assertEquals(customDescription.getValue(), captor.getValue().getDescription());
+    }
+
+    // 8. Description falls back to default if not set in FilingHistorySpec
+    @Test
+    void createWithNullDescription_setsDefaultDescription() throws DataException, BarcodeServiceException {
+        CompanySpec spec = new CompanySpec();
+        spec.setCompanyNumber(COMPANY_NUMBER);
+        FilingHistorySpec fhSpec = new FilingHistorySpec();
+        fhSpec.setType("REC1");
+        fhSpec.setDescription(null); // Explicitly null
+
+        spec.setFilingHistoryList(List.of(fhSpec));
+
+        when(randomService.getNumber(ENTITY_ID_LENGTH)).thenReturn(UN_ENCODED_ID);
+        when(randomService.addSaltAndEncode(ENTITY_ID_PREFIX + UN_ENCODED_ID, 8)).thenReturn(TEST_ID);
+        when(barcodeService.getBarcode()).thenReturn(BARCODE);
+
+        FilingHistory savedHistory = new FilingHistory();
+        when(filingHistoryRepository.save(Mockito.any())).thenReturn(savedHistory);
+
+        filingHistoryService.create(spec);
+
+        ArgumentCaptor<FilingHistory> captor = ArgumentCaptor.forClass(FilingHistory.class);
+        verify(filingHistoryRepository).save(captor.capture());
+        assertEquals(FilingHistoryDescriptionType.INCORPORATION_COMPANY.getValue(), captor.getValue().getDescription());
+    }
+
 }
